# vtap100

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yaml  qa.yaml  qa.yml  release.yaml  tests.yaml  tests.yml
docs/: PLAN.md  PLAN_CONFIG_VALIDATION.md  PLAN_DOCUMENTATION.md  PLAN_EXPORT_DIALOG.md  PLAN_KBSOURCE_CHECKBOXES.md  PLAN_KBSOURCE_FIX.md  PLAN_LEDSELECT_DEFAULT.md  PLAN_TESTABDECKUNG.md  PLAN_TUI.md  README.md  RELEASING.md  api.md  development.md  quickstart.md  troubleshooting.md  tui.md  wizard.md
docs/configuration/: apple_vas.md  desfire.md  google_smarttap.md  keyboard.md  led_beep.md  nfc_tags.md  overview.md  settings_reference.md
docs/deployment/: upload_to_reader.md
docs/references/: cli.md  sources.md
src/vtap100/: __init__.py  cli.py  generator.py  parser.py
src/vtap100/models/: __init__.py  base.py  config.py  desfire.py  feedback.py  keyboard.py  nfc.py  smarttap.py  vas.py
src/vtap100/templates/: __init__.py
src/vtap100/tui/: __init__.py  app.py
src/vtap100/tui/help/: __init__.py
src/vtap100/tui/help/de/: desfire.yaml  feedback.yaml  keyboard.yaml  nfc.yaml  smarttap.yaml  vas.yaml
src/vtap100/tui/help/en/: desfire.yaml  feedback.yaml  keyboard.yaml  nfc.yaml  smarttap.yaml  vas.yaml
src/vtap100/tui/i18n/: __init__.py
src/vtap100/tui/i18n/translations/: de.yaml  en.yaml
src/vtap100/tui/screens/: __init__.py  editor.py  export_dialog.py  quit_confirm_dialog.py  save_dialog.py  unsaved_changes_dialog.py
src/vtap100/tui/styles/: editor.tcss
src/vtap100/tui/widgets/: __init__.py  help_panel.py  preview.py  sidebar.py
src/vtap100/tui/widgets/forms/: __init__.py  base.py  desfire.py  feedback.py  keyboard.py  nfc.py  smarttap.py  vas.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_branch_coverage.py  test_cli.py  test_cli_editor.py  test_generator.py  test_help_i18n.py  test_models_desfire.py  test_models_feedback.py  test_models_keyboard.py  test_models_nfc.py  test_models_smarttap.py  test_models_vas.py  test_parser.py  test_tui_app.py  test_tui_app_extended.py  test_tui_export.py  test_tui_form_dirty.py  test_tui_forms.py  test_tui_forms_extended.py  test_tui_forms_phase5.py  test_tui_help.py  test_tui_i18n.py  test_tui_load.py  test_tui_navigation_dirty.py  test_tui_preview.py  test_tui_quit_confirm.py  test_tui_run.py  test_tui_save.py  test_tui_sidebar.py  test_tui_unsaved_dialog.py  test_version.py
