[project]
name = "vtap100"
version = "0.5.0"
description = "Configuration generator for dotOrigin VTAP100 NFC reader"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "HEIDI Team" }
]
keywords = ["nfc", "vtap100", "dotorigin", "apple-wallet", "google-wallet", "vas", "smart-tap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware",
]

dependencies = [
    "pydantic>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "textual>=0.40.0",
    "pyperclip>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
vtap100 = "vtap100.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vtap100"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=vtap100 --cov-report=term-missing --cov-fail-under=60"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
# Note: Coverage target reduced to 60% for Phase 1 due to CLI being difficult to test
# without Click testing fixtures. Will be increased in later phases.

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "D",      # pydocstyle
]
ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-local-folder = ["vtap100"]
force-single-line = true
force-sort-within-sections = true
case-sensitive = false
lines-after-imports = 2
no-sections = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "vtap100.cli"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disable_error_code = ["arg-type", "union-attr", "attr-defined", "misc"]

[[tool.mypy.overrides]]
module = "vtap100.tui.*"
disallow_untyped_defs = false
disable_error_code = ["attr-defined", "arg-type", "no-untyped-def", "assignment", "no-any-return"]

[[tool.mypy.overrides]]
module = "vtap100.parser"
disable_error_code = ["assignment", "attr-defined"]
